==============================================================================
TradeDangerous, Copyright (C) Oliver "kfsone" Smith, July 2014
==============================================================================

v6.12.0 Feb 23 2015
. (kfsone) Added "market", "shipyard" and "modified" values to Station table

v6.11.0 Feb 21 2015
. (kfsone) Added "market" command for viewing station buy/sell list
   e.g. trade.py market ramoncity --buy --sell -vv
. (kfsone) Lots of improvements to edscupdate.py;
   - added --random, checks 10 random new systems,
   - added --conf N for changing the confidence rating,
   - added --detail (-v) and --debug (-w),
   - added --summary
   - added --test (use the EDSC test database),
   - added explanatory "splash" text (--no-splash or -NS to skip),
. (kfsone) Allow a cache rebuild at the start of a mad import
+ (kfsone, maddavo) Lots of Systems and Stations

v6.10.0 Feb 14 2015
. (kfsone) Major changes to the 'maddavo' plugin:
    - The plugin now supports "merging" of Systems and Stations from
      maddavo's site into your local db. It does not, by default, write
      these to the ".csv" files.
    - Removed "--opt=syscsv" and "--opt=stncsv",
    - Added "--opt=systems" and "--opt=stations" and "--exportcsv",
    - Assorted cleanup
Also:
. (kfsone) "run" with "--progress" is less silent,
. (kfsone) Fixed 'set changed size' error in run command
. (kfsone) Improvements to the TradeCalc api for accessing station trades
. (kfsone) Added "--gain-per-ton" (--gpt) to run command
. (kfsone) Added "CSVStream" class to transfers.py
. (kfsone) Added "Progress" progress-bar class to misc/progress.py
+ 130 new systems from EDSC

v6.9.2 Feb 08 2015
. (kfsone) Feature #158 Find rares based on distance from multiple systems
       "--away <ly>" and "--from <system1> --from <system2> ..."
. (kfsone) "run" -vv output now shows buy and sell price, use -vvv for totals
. (kfsone) Issue #165 "--to" for system without stations gave wrong result,